- MFH: Fixed bug #33829 (mime_content_type() returns text/plain for gzip and   bzip files).